[gd_scene load_steps=3 format=3 uid="uid://dvxl11nwweyi3"]

[ext_resource type="Script" uid="uid://bbyy68auq6yjg" path="res://main_menu.gd" id="1_i26rj"]
[ext_resource type="AudioStream" uid="uid://3hbil1dsdbmn" path="res://assets/sounds/Menu_tic.wav" id="2_eiy7p"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i26rj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 645.0
color = Color(0.552941, 0.631373, 0.686275, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -163.0
offset_top = -52.0
offset_right = 163.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
text = "Play"

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -225.0
offset_top = 100.0
offset_right = 225.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 35
text = "Minesweeper"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Menu_tic_player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_eiy7p")
volume_db = -7.496
pitch_scale = 0.86

[node name="HardMode" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 533.0
offset_top = 229.0
offset_right = 619.0
offset_bottom = 260.0
text = "Easy"

[connection signal="focus_entered" from="VBoxContainer/Play" to="." method="_on_play_hovered"]
[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_clicked"]
[connection signal="focus_entered" from="VBoxContainer/Exit" to="." method="_on_exit_hovered"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_clicked"]
[connection signal="toggled" from="HardMode" to="." method="_on_hardmode_toggled"]
